--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "express-handlebars": "^5.2.0",
+    "express-fileupload": "^1.2.0",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
