--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-fileupload": "^1.2.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.8.0",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "local-storage": "^2.0.0",
     "mongoose": "^5.11.8",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
