--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "author": "Gonçalo Correia",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.5",
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
