--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
   "author": "Gonçalo Correia",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
@@ -35,6 +35,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
+    "node-localstorage": "^2.1.6",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
