--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.28.0",
+    "react-use-auth": "^2.1.0-14",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
