--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "infinite-react-carousel": "^1.2.11",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.1",
+    "react-responsive": "^8.2.0",
     "react-responsive-carousel": "^3.2.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
