--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
   "name": "give-my-money-back",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Experiencia",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
