--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://jekash.herokuapp.com/",
   "eslintConfig": {
     "extends": [
       "react-app",
