--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "infinite-react-carousel": "^1.2.11",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.1",
+    "react-google-login": "^5.2.2",
     "react-responsive-carousel": "^3.2.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
