--- a/client/package.json
+++ b/client/package.json
@@ -3,33 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@splidejs/splide": "^2.4.21",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
-    "axios": "^0.21.4",
+    "axios": "^1.4.0",
     "infinite-react-carousel": "^1.2.11",
-    "jsonwebtoken": "^8.5.1",
-    "react": "^17.0.1",
-    "react-device-detect": "^1.15.0",
-    "react-dom": "^17.0.1",
-    "react-elastic-carousel": "^0.11.1",
+    "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-google-login": "^5.2.2",
-    "react-responsive-carousel": "^3.2.12",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-slick": "^0.28.0",
-    "react-use-auth": "^2.1.0-14",
-    "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "react-jwt": "^1.1.8",
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "set PORT=62133 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://jekash.herokuapp.com/",
   "eslintConfig": {
     "extends": [
       "react-app",
