FODASSE MERDA PARA ESTA MERDA

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 LOCAL_SERVERKEY = "jeKash2021!"
 SECRET_SV_KEY = "secret"
 urltest = "http://localhost:3000/"
+
+googleAuthSecret = "393111472473-s3heia0a43i612bsl0jvj7v5j4vsjr8k.apps.googleusercontent.com"
