--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "express-fileupload": "^1.2.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.8.0",
+    "google-auth-library": "^8.8.0",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "local-storage": "^2.0.0",
