--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.11.0",
     "axios": "^1.4.0",
     "infinite-react-carousel": "^1.2.11",
     "react": "^18.2.0",
